@@ -1,10 +1,10 @@
 package com.fmattaperdomo.ecommerce_arka.services;
 
-import com.fmattaperdomo.ecommerce_arka.dtos.CategoryDto;
-import com.fmattaperdomo.ecommerce_arka.dtos.CategoryResponse;
 import com.fmattaperdomo.ecommerce_arka.exceptions.APIException;
 import com.fmattaperdomo.ecommerce_arka.exceptions.ResourceNotFoundException;
 import com.fmattaperdomo.ecommerce_arka.entities.Category;
+import com.fmattaperdomo.ecommerce_arka.dtos.CategoryDto;
+import com.fmattaperdomo.ecommerce_arka.dtos.CategoryResponse;
 import com.fmattaperdomo.ecommerce_arka.repositories.CategoryRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,10 +15,10 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class CategoryServiceImpl implements CategoryService {
+public class CategoryServiceImpl implements CategoryService{
+
     @Autowired
     private CategoryRepository categoryRepository;
 
@@ -26,15 +26,22 @@ public class CategoryServiceImpl implements CategoryService {
     private ModelMapper modelMapper;
 
     @Override
-    public CategoryResponse getCategories(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
-        Sort sortByAndOrder = sortBy.equalsIgnoreCase("asc")? Sort.by(sortBy).ascending(): Sort.by(sortBy).descending();
-        Pageable pageable = PageRequest.of(pageNumber, pageSize,sortByAndOrder);
-        Page<Category> categoryPage = categoryRepository.findAll(pageable);
+    public CategoryResponse getAllCategories(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc")
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
+
+        Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sortByAndOrder);
+        Page<Category> categoryPage = categoryRepository.findAll(pageDetails);
+
         List<Category> categories = categoryPage.getContent();
-        if (categories.isEmpty()) {
+        if (categories.isEmpty())
             throw new APIException("No category created till now.");
-        }
-        List<CategoryDto> categoryDtos = categories.stream().map(category -> modelMapper.map(category, CategoryDto.class)).collect(Collectors.toList());
+
+        List<CategoryDto> categoryDtos = categories.stream()
+                .map(category -> modelMapper.map(category, CategoryDto.class))
+                .toList();
+
         CategoryResponse categoryResponse = new CategoryResponse();
         categoryResponse.setContent(categoryDtos);
         categoryResponse.setPageNumber(categoryPage.getNumber());
@@ -42,7 +49,6 @@ public class CategoryServiceImpl implements CategoryService {
         categoryResponse.setTotalElements(categoryPage.getTotalElements());
         categoryResponse.setTotalPages(categoryPage.getTotalPages());
         categoryResponse.setLastPage(categoryPage.isLast());
-
         return categoryResponse;
     }
 
@@ -50,23 +56,26 @@ public class CategoryServiceImpl implements CategoryService {
     public CategoryDto createCategory(CategoryDto categoryDto) {
         Category category = modelMapper.map(categoryDto, Category.class);
         Category categoryFromDb = categoryRepository.findByCategoryName(category.getCategoryName());
-        if (categoryFromDb != null) {
-            throw new APIException("Category with the name " + category.getCategoryName() + " already exists!!!");
-        }
+        if (categoryFromDb != null)
+            throw new APIException("Category with the name " + category.getCategoryName() + " already exists !!!");
         Category savedCategory = categoryRepository.save(category);
         return modelMapper.map(savedCategory, CategoryDto.class);
     }
 
     @Override
     public CategoryDto deleteCategory(Long categoryId) {
-        Category category = categoryRepository.findById(categoryId).orElseThrow(() -> new ResourceNotFoundException("Category","categoryId", categoryId));
+        Category category = categoryRepository.findById(categoryId)
+                .orElseThrow(() -> new ResourceNotFoundException("Category","categoryId",categoryId));
+
         categoryRepository.delete(category);
         return modelMapper.map(category, CategoryDto.class);
     }
 
     @Override
-    public CategoryDto updateCategory(CategoryDto categoryDto,Long categoryId) {
-        Category savedCategory = categoryRepository.findById(categoryId).orElseThrow(() -> new ResourceNotFoundException("Category","categoryId", categoryId));
+    public CategoryDto updateCategory(CategoryDto categoryDto, Long categoryId) {
+        Category savedCategory = categoryRepository.findById(categoryId)
+                .orElseThrow(() -> new ResourceNotFoundException("Category","categoryId",categoryId));
+
         Category category = modelMapper.map(categoryDto, Category.class);
         category.setCategoryId(categoryId);
         savedCategory = categoryRepository.save(category);
